send previous requests/results as messages, rather than all in the first user message

--- a/templates/context.jinja2
+++ b/templates/context.jinja2
@@ -1,3 +1,5 @@
+You are an expert web developer, you are tasked with producing a single file that will be used to display data from a datasette api.  All of your code should be inline in the html file, but you can use CDNs to import packages if needed.
+
 Attached is documentation and schema for the datasette api: 
 
 <API>
@@ -11,12 +13,3 @@ Attached is documentation and schema for the datasette api:
 <Schema>
 {{ schema }}
 </Schema>
-
-{% if previous %}
-The previous generate page is:
-
-{{ previous }}
-
-{% endif %}Produce a single single html file with inline <script> to fetch from said api and display data that user requests:
-
-{{ query }}
