--- a/templates/page.html
+++ b/templates/page.html
@@ -23,7 +23,8 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
-        iframe {
+        iframe,
+        #generating {
             width: 100%;
             height: 100%;
             border: none;
@@ -74,19 +75,41 @@
 <body>
     <header>
         <form method='post'>
-            <a href='/'>home</a>
-            {% if metadata.base %}
-            <a href='/pages/{{ metadata.base }}'>parent</a>
-            {% endif %}
+            <a href="/">/</a>
+            <a href='/{{ project }}'>{{ project }}</a>
             <input type='text' name='query' value='{{ metadata.query }}' style="width: 60%; padding: 5px;" />
+            <input type='hidden' name='kind' value='page' />
+            {% if metadata.generation %}
+            <input type='hidden' name='base' value='{{ metadata.generation }}' />
+            {% endif %}
+            <input type='hidden' name='page' value='{{ metadata.page }}' />
             <input type='hidden' name='url' value='{{ metadata.url }}' />
-            <input type='hidden' name='base' value='{{ uuid }}' />
-            <button type='submit' formaction='/' onclick="handleSubmit(event, '/')">Modify</button>
             <button type='submit' onclick="handleSubmit(event)">Regenerate</button>
-            <button type='submit' formaction='/delete/{{ uuid }}' formmethod='post'>Delete</button>
+            <button type='submit' formaction='/{{ project }}/page/{{ id }}/delete' formmethod='post'>Delete</button>
         </form>
+        <ul>
+            <select id="generationSelect" onchange="switchGeneration()">
+                {% for generation in generations %}
+                <option value="{{ generation.uuid }}" {% if generation.uuid == selected_generation %}selected{% endif %}>{{ generation.query }}</option>
+                {% endfor %}
+            </select>
+        </ul>
     </header>
-    <iframe src="/pages/{{ uuid }}.html" onload="updateFavicon()"></iframe>
+    <script>
+        function switchGeneration() {
+            const select = document.getElementById('generationSelect');
+            const selectedGenerationId = select.value;
+            const currentUrl = window.location.pathname;
+            const projectAndPageId = currentUrl.split('/').slice(1, 4).join('/');
+            window.location.href = `/${projectAndPageId}/${selectedGenerationId}`;
+        }
+    </script>
+    {% if selected_generation %}
+    <iframe src="/{{ project }}/generation/{{ selected_generation }}.html" onload="updateFavicon()"></iframe>
+    {% else %}
+    <div id="generating">No page yet... showing on project/generation/id pages is broken ... and weird... probably needs
+        separate templates?</div>
+    {% endif %}
 </body>
 
 </html>
