some progress on page versions

--- a/templates/history.html
+++ b/templates/history.html
@@ -24,7 +24,7 @@
         }
 
         iframe,
-        #generating {
+        main {
             width: 100%;
             height: 100%;
             border: none;
@@ -77,39 +77,29 @@
         <form method='post'>
             <a href="/">/</a>
             <a href='/{{ project }}'>{{ project }}</a>
-            <input type='text' name='query' value='{{ metadata.query }}' style="width: 60%; padding: 5px;" />
-            <input type='hidden' name='kind' value='page' />
-            {% if metadata.generation %}
-            <input type='hidden' name='base' value='{{ metadata.generation }}' />
-            {% endif %}
-            <input type='hidden' name='page' value='{{ metadata.page }}' />
-            <input type='hidden' name='url' value='{{ metadata.url }}' />
-            <button type='submit' onclick="handleSubmit(event)">Regenerate</button>
-            <button type='submit' formaction='/{{ project }}/page/{{ page }}/delete' formmethod='post'>Delete</button>
+            <a href='/{{ project }}/page/{{ page }}'>{{ page }}</a>
         </form>
-        <ul>
-            <select id="generationSelect" onchange="switchGeneration()">
-                {% for generation in generations %}
-                <option value="{{ generation.uuid }}" {% if generation.uuid == selected_generation %}selected{% endif %}>{{ generation.query }}</option>
-                {% endfor %}
-            </select> | <a href="/{{ project }}/page/{{ page }}/history">History</a>
-        </ul>
     </header>
-    <script>
-        function switchGeneration() {
-            const select = document.getElementById('generationSelect');
-            const selectedGenerationId = select.value;
-            const currentUrl = window.location.pathname;
-            const projectAndPageId = currentUrl.split('/').slice(1, 4).join('/');
-            window.location.href = `/${projectAndPageId}/${selectedGenerationId}`;
-        }
-    </script>
-    {% if selected_generation %}
-    <iframe src="/{{ project }}/generation/{{ selected_generation }}.html" onload="updateFavicon()"></iframe>
-    {% else %}
-    <div id="generating">No page yet... showing on project/generation/id pages is broken ... and weird... probably needs
-        separate templates?</div>
-    {% endif %}
+
+
+    <main>
+    <table>
+        <thead>
+            <tr>
+                <th>Query</th>
+                <th>Creation Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for generation in generations %}
+            <tr>
+                <td><a href='/{{ project }}/generation/{{ generation.uuid }}.html'>{{ generation.query }}</a></td>
+                <td>{{ generation.created }}</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </main>
 </body>
 
 </html>
