--- a/templates/page.html
+++ b/templates/page.html
@@ -11,13 +11,11 @@
             margin: 0;
             padding: 0;
             height: 100%;
+            display: flex;
+            flex-direction: column;
         }
 
         header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
             background-color: #f0f0f0;
             padding: 10px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -25,10 +23,9 @@
 
         iframe,
         #generating {
+            flex: 1;
             width: 100%;
-            height: 100%;
             border: none;
-            margin-top: 60px;
         }
 
         #toast {
