--- a/templates/page.html
+++ b/templates/page.html
@@ -176,6 +176,7 @@
         <form method='post' action="/{{ project }}/page/{{ page }}">
             <a href="/">/</a>
             <a href='/{{ project }}'>{{ project }}</a>
+            <input type="checkbox" name="prefix" value="true">
             <input type='text' id="form-text" name='query' value='{{ metadata.query }}'
                 style="width: 60%; padding: 5px;" />
             <input type='hidden' name='kind' value='page' />
